--- a/app/src/main/res/layout/item_hot.xml
+++ b/app/src/main/res/layout/item_hot.xml
@@ -16,17 +16,17 @@
         android:orientation="vertical"
         >
         <ImageView
-            android:id="@+id/img_bxh"
+            android:id="@+id/img_hot"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ts1"
             />
         <TextView
-            android:id="@+id/tv_bxh"
+            android:id="@+id/tv_hot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="book 1"
+            android:text="book1"
             android:padding="6px"
             android:textSize="14sp"
             android:textColor="@color/black"/>
