--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,69 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     android:orientation="vertical"
-    android:padding="15dp"
-    >
+    android:background="@color/black"
+    tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hay Nhất"
-            android:textSize="30dp"
-            android:textColor="@color/white"
-            android:drawableRight="@drawable/baseline_search_24"
-            />
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_hot"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
+        android:layout_margin="10dp"
+        android:orientation="vertical"
         >
-    </androidx.recyclerview.widget.RecyclerView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_bxh"
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center_vertical"
+            android:text="Chào buổi sáng"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Nhạc"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/xam"
+                android:textSize="12sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Podcast và chương trình"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/xam"
+                android:layout_marginLeft="5dp"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-
         >
-    </androidx.recyclerview.widget.RecyclerView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
 
-        >
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_CatALbum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:orientation="horizontal">
+        android:layout_height="80dp"
+        android:background="@drawable/gradient"
+        >
+
         <Button
+            android:id="@+id/btn_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/baseline_home_24"
             android:layout_weight="1"
-            android:text="Bản tin"
-            android:backgroundTint="#00000000"/>
+            android:padding="0dp"
+            android:backgroundTint="@color/trongsuot"
+            android:drawableTop="@drawable/icon_home"
+            android:text="Trang chủ"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            />
+
         <Button
+            android:id="@+id/btn_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/outline_explore_24"
             android:layout_weight="1"
-            android:text="Khám phá"
-            android:backgroundTint="#00000000"/>
+            android:padding="0dp"
+            android:backgroundTint="@color/trongsuot"
+            android:drawableTop="@drawable/icon_search"
+            android:text="Tìm kiếm"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            />
+
         <Button
+            android:id="@+id/btn_lib"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/baseline_home_24"
             android:layout_weight="1"
-            android:text="Cá Nhân"
-            android:backgroundTint="#00000000"/>
+            android:padding="0dp"
+            android:backgroundTint="@color/trongsuot"
+            android:drawableTop="@drawable/icon_list"
+            android:text="Thư viên"
+            android:textColor="@color/white"
+            android:textSize="15sp"/>
+
     </LinearLayout>
 
 
