--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,112 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/black"
-    tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        >
+    tools:context=".home">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-black"
-            android:gravity="center_vertical"
-            android:text="Chào buổi sáng"
-            android:textColor="@color/white"
-            android:textSize="30sp" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            >
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Nhạc"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/xam"
-                android:textSize="12sp" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Podcast và chương trình"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/xam"
-                android:layout_marginLeft="5dp"
-                android:textSize="12sp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        >
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_CatALbum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@drawable/gradient"
-        >
-
-        <Button
-            android:id="@+id/btn_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="0dp"
-            android:backgroundTint="@color/trongsuot"
-            android:drawableTop="@drawable/icon_home"
-            android:text="Trang chủ"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            />
-
-        <Button
-            android:id="@+id/btn_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="0dp"
-            android:backgroundTint="@color/trongsuot"
-            android:drawableTop="@drawable/icon_search"
-            android:text="Tìm kiếm"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            />
-
-        <Button
-            android:id="@+id/btn_lib"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="0dp"
-            android:backgroundTint="@color/trongsuot"
-            android:drawableTop="@drawable/icon_list"
-            android:text="Thư viên"
-            android:textColor="@color/white"
-            android:textSize="15sp"/>
-
-    </LinearLayout>
-
-
-</LinearLayout>
+        android:layout_margin="10dp" />
+</RelativeLayout>
