--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="xam">#222020</color>
     <color name="nen">#08534C</color>
-
+    <color name="lavender">#8692f7</color>
 </resources>
