--- a/app/src/main/res/layout/fragment_homefragment.xml
+++ b/app/src/main/res/layout/fragment_homefragment.xml
@@ -44,14 +44,14 @@
                 android:layout_height="200dp"
                 >
             </androidx.recyclerview.widget.RecyclerView>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_bxh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
 
-                >
-            </androidx.recyclerview.widget.RecyclerView>
+                ></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
     </ScrollView>
 
