--- a/app/src/main/res/layout/fragment_kp.xml
+++ b/app/src/main/res/layout/fragment_kp.xml
@@ -6,9 +6,12 @@
     tools:context=".kp">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvBXH"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/item_bxh">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
