--- a/app/src/main/res/layout/item_bxh.xml
+++ b/app/src/main/res/layout/item_bxh.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
         <ImageView
