--- a/app/src/main/res/layout/item_1.xml
+++ b/app/src/main/res/layout/item_1.xml
@@ -3,34 +3,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
     app:cardCornerRadius="10dp"
-    android:layout_marginTop="15dp">
-    <LinearLayout
-        android:gravity="center"
+    android:layout_margin="10dp"
+    >
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="200dp"
+
         >
+
         <ImageView
-            android:id="@+id/img_bxh"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:id="@+id/img_news2"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/ts1"
-            />
+            android:src="@drawable/ts1">
+
+        </ImageView>
+
         <TextView
             android:id="@+id/tv_bxh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="book 1"
             android:padding="6px"
-            android:textSize="14sp"
-            android:textColor="@color/black"/>
-    </LinearLayout>
+            android:text="book 1"
+            android:textColor="@color/white"
+            android:textSize="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
 
 
 
