--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -2,7 +2,6 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     >
@@ -18,21 +17,33 @@
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:padding="6dp"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="20sp"
             android:layout_toRightOf="@+id/img_news"
             android:text="Title"/>
         <TextView
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="newsDate"
             android:layout_below="@+id/tv_title"
-            android:layout_marginTop="30dp"
-            android:padding="10dp"
-            android:gravity="right"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+
             android:layout_toRightOf="@+id/img_news"/>
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="newsDate"
+            android:layout_below="@+id/tv_title"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:textSize="15sp"
+            android:layout_marginLeft="30dp"
+            android:layout_toRightOf="@+id/date"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
