--- a/app/src/main/res/layout/item_1.xml
+++ b/app/src/main/res/layout/item_1.xml
@@ -9,13 +9,13 @@
     android:layout_margin="10dp"
     >
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="200dp"
 
         >
 
         <ImageView
-            android:id="@+id/img_news2"
+            android:id="@+id/img_news1"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -24,14 +24,13 @@
         </ImageView>
 
         <TextView
-            android:id="@+id/tv_bxh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/tv_title1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:padding="6px"
             android:text="book 1"
             android:textColor="@color/white"
-            android:textSize="10dp"
-            android:layout_marginBottom="10dp"
+            android:textSize="20dp"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
